@@ -871,12 +871,14 @@ namespace OpenBabel {
  -f <#> Start import at molecule # specified\n \
  -l <#> End import at molecule # specified\n \
  -e Continue with next object after error, if possible\n \
- -z Compress the output with gzip\n";
+ -z Compress the output with gzip\n \
+ -k Attempt to translate keywords\n";
 #else
     return "Conversion options\n \
  -f <#> Start import at molecule # specified\n \
  -l <#> End import at molecule # specified\n \
- -e Continue with next object after error, if possible\n";
+ -e Continue with next object after error, if possible\n \
+ -k Attempt to translate keywords\n";
 #endif
     // -t All input files describe a single molecule
   }
